feat: Add conversation cancellation and UI polish
Introduces the ability to cancel ongoing AI-powered conversations by integrating AbortController. This prevents resource waste and improves user experience by allowing them to stop lengthy or erroneous generation processes.

Additionally, minor UI adjustments are made to the scrollbar styling for a cleaner look.

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <style>
       /* Custom Scrollbar for sleek look */
       ::-webkit-scrollbar {
-        width: 8px;
-        height: 8px;
+        width: 4px;
+        height: 4px;
       }
       ::-webkit-scrollbar-track {
-        background: #0f172a; 
+        background: transparent; 
       }
       ::-webkit-scrollbar-thumb {
         background: #334155; 
-        border-radius: 4px;
+        border-radius: 2px;
       }
       ::-webkit-scrollbar-thumb:hover {
         background: #475569; 
